welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
    
  def marqueSol() {
    baisseBrosse()
    gauche(); droite()
    leveBrosse() 
  }
  
  def faireV(c : Color) {
    setCouleurBrosse(c)
    avance(2)
    marqueSol()
    avance()
    gauche()
    avance()
    marqueSol()
    recule()
    droite()
    avance()
    marqueSol()
    avance(2)
    gauche()
  }
  faireV(color.GREEN)
}